--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Joe Chapman",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.1",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "pg": "^6.1.2",
